xcb: update WM_TRANSIENT_FOR on transientParent native window recreation

It follows f9e4402ffeef791e66b7b2f2cc332000df7f5cd4.

Fixes: QTBUG-105395
Change-Id: I399c448517b7dbdc28ba33f75ae43102836a8998
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit f2c5b846e092270e1f43b0625db26789a5f77ba6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit eb7df2d77b0ee13b8d751be64ff606dd9d5cdf6d)
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 98ee3222b48fc974f4565007c953728d34408941)