src/plugins/platforms/xcb/qxcbwindow.h
@@ -42,6 +42,7 @@
 
 #include <qpa/qplatformwindow.h>
 #include <QtCore/QObject>
+#include <QtCore/QPointer>
 #include <QtGui/QSurfaceFormat>
 #include <QtGui/QImage>
 
@@ -156,6 +157,8 @@ public:
                           Qt::KeyboardModifiers modifiers, QEvent::Type type, Qt::MouseEventSource source);
 
     void updateNetWmUserTime(xcb_timestamp_t timestamp);
+    void updateWmTransientFor();
+    void registerWmTransientForChild(QXcbWindow *);
 
     static void setWmWindowTypeStatic(QWindow *window, QXcbWindowFunctions::WmWindowTypes windowTypes);
     static void setWmWindowRoleStatic(QWindow *window, const QByteArray &role);
@@ -292,6 +295,8 @@ protected:
     qreal m_sizeHintsScaleFactor = 1.0;
 
     RecreationReasons m_recreationReasons = RecreationNotNeeded;
+
+    QList<QPointer<QXcbWindow>> m_wmTransientForChildren;
 };
 
 class QXcbForeignWindow : public QXcbWindow
